Reserve balances page of Coinbase custody wallets (#175)
* reserver balances

* DateTimeOffset.Min value problem resolved

* Resolve 2 failed tests due to UTC DateTime

* UTC problems resolved in tests.

* running the tests from Mexico worked 🤠🤠🥳

* add IndexManagerApiConfiguration to get Api Url

* use api WrappingClient.GetTrakxBalanceAsync() to get accounts balances...

* enrich AccountBalanceModel, start implementing WrappingService, share Coinbase currency caching

* new Wallet objects from Coinbase Custody, fix tests

* remove currencyCache from WrappingService

* fix tests and update IndexManager Api

* fix default server URL, codacy, injection and add columns to reserve grid
