# src/Trakx.Common/Models/AccountBalanceModel.cs
@@ -1,20 +1,29 @@
 ﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Threading.Tasks;
 
 namespace Trakx.Common.Models
 {
     public class AccountBalanceModel
     {
-        public AccountBalanceModel(string token, decimal balance)
+        public AccountBalanceModel(string symbol,
+            decimal balance,
+            ulong nativeBalance, 
+            string name, 
+            string address, 
+            DateTimeOffset lastUpDate)
         {
-            Token = token;
+            Symbol = symbol;
             Balance = balance;
+            NativeBalance = nativeBalance;
+            Name = name;
+            Address = address;
+            LastUpDate = lastUpDate;
         }
 
-        public string Token { get; set; }
-
+        public string Symbol { get; set; }
+        public ulong NativeBalance { get; set; }
         public decimal Balance { get; set; }
+        public string Name { get; set; }
+        public string Address { get; set; }
+        public DateTimeOffset LastUpDate { get; set; }
     }
 }
